--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,6 +5,7 @@
     <title>Coding Events</title>
     <link rel="stylesheet" th:href="@{/styles.css}">
     <script th:src="@{/script.js}"></script>
+    <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
 <body>
 
